fixed the nav spacing

--- a/src/shared/styles.css
+++ b/src/shared/styles.css
@@ -45,15 +45,6 @@ body {
   justify-content: space-between;
 }
 
-.border-container {
-  padding: 0;
-  margin: 0;
-  display: flex;
-  background: var(--yellow);
-  height: 12px;
-  width: 100vw;
-}
-
 a {
   color: var(--yellow);
   font-weight: 600;
@@ -67,10 +58,9 @@ li {
   color: white;
   display: flex;
   justify-content: space-around;
-  padding-left: 0;
   position: absolute;
   bottom: 10px;
-  width: 8 0vw;
+  width: 80vw;
 }
 
 .nav a {
